Favori: Fix width 100% on mobile and tab

--- a/src/App.css
+++ b/src/App.css
@@ -229,6 +229,7 @@ header .container-fluid .row {
 @media(max-width: 576px) {
   #section-1 {
       max-width: 100% !important;
+      width:100% !important;
       margin-left: 0 !important;
       margin-right: 0 !important;
       padding-left: 0 !important;
